--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,23 +1,16 @@
 <main>
-{{!--   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="/public/images/dog1.png" class="d-block w-100" alt="...">
+  <div class="slider" data-bs-ride="slider">
+    <div class="slider-inner">
+      <div class="slider-item">
+        <h2 class="slider-item-text">Cuide <span class="smaller-text">do seu </span>melhor amigo!</h2>
+        <img class="slider-img" src="/public/images/dogslider1.png" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+      <div class="slider-item" hidden>
+        <img class="slider-img" src="/public/images/dogheader.png" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+      <div class="slider-item" hidden>
+        <img class="slider-img" src="..." class="d-block w-100" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> --}}
+</div>
 </main>
