--- a/public/index.css
+++ b/public/index.css
@@ -8,16 +8,68 @@ header {
   background-color: #2cbbc3;
 }
 
-#header_container {
-  background-color: #FF9934;
+#title {
+  font-family: 'Arial Narrow', Arial, sans-serif;
+  font-size: 50px;
+  font-weight: 700;
 }
+
+#title > span {
+  color: orange;
+}
+
+#header_container {
+  width: 100%;
+  background-image: url('/public/images/HeaderBackground.jpg');
+}
+
+#nav_width {
+  position: absolute;
+  left: -1px;
+  width: 80%;
+  height: 72px;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+  background-color: white;
+  box-shadow: -4px 6px 20px 4px #5756566b;
+}
+
+#header_container *:not(#nav-width), #header_dog {
+  z-index: 999;
+}
+
+#logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 250px;
+  height: 250px;
+  background-color: white;
+  border-radius: 200%;
+  box-shadow: 0 7px 20px 5px #575656;
+}
+
+#logo > svg {
+  filter: invert(35%) sepia(30%) saturate(979%) hue-rotate(348deg) brightness(97%) contrast(91%);
+} 
 
 #header_dog {
   position: relative;
-  top: 32.8%;
+  top: 34.8%;
   left: 12%;
   margin-top: -70px;
   width: 150px;
+}
+
+.nav li {
+  font-size: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bolder;
+}
+
+.nav li:first-child {
+  color: white;
 }
   
 #header_div {
@@ -28,8 +80,11 @@ header {
 .slider-inner {
   display: flex;
   justify-content: space-around;
-  background-color: #f8f246;
-  height: 700px;
+  background-color: #2cbbc3;
+  width: 100%;
+  height: 100%;
+  border-bottom-right-radius: 80%;
+  border-bottom-left-radius: 20%;
 }
 
 .slider-item {
@@ -39,11 +94,13 @@ header {
 }
 
 .slider-item-text {
-  -webkit-text-stroke: 1px black;
+  text-shadow: 1px 3px 5px black;
+  -webkit-text-stroke: 1px #ffffff;
   font-size: 100px;
   color: white;
   font-family: fantasy;
   width: 250px;
+  padding: 10px;
 }
 
 .smaller-text {
