--- a/public/index.css
+++ b/public/index.css
@@ -15,12 +15,26 @@ header {
 }
 
 #title > span {
-  color: orange;
+  color: #ff9934;
 }
 
 #header_container {
   width: 100%;
+}
+
+#nav_background {
+  width: 100%;
   background-image: url('/public/images/HeaderBackground.jpg');
+  background-size: 30%;
+  height: 200px;
+  position: absolute;
+  left: -1px;
+}
+
+#header_top {
+  width: 100%;
+  height: 100px;
+  background-color: #2cbbc3;
 }
 
 #nav_width {
@@ -34,7 +48,7 @@ header {
   box-shadow: -4px 6px 20px 4px #5756566b;
 }
 
-#header_container *:not(#nav-width), #header_dog {
+#header_container *:not(#nav-width) {
   z-index: 999;
 }
 
@@ -53,14 +67,6 @@ header {
 #logo > svg {
   filter: invert(35%) sepia(30%) saturate(979%) hue-rotate(348deg) brightness(97%) contrast(91%);
 } 
-
-#header_dog {
-  position: relative;
-  top: 34.8%;
-  left: 12%;
-  margin-top: -70px;
-  width: 150px;
-}
 
 .nav li {
   font-size: 20px;
