--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,7 @@
 <header>
-  <img id="header_dog" src="/public/images/dogheader.png">
+  <div id="header_top"></div>
   <div id="header_container" class="d-flex flex-wrap align-items-center m-0 p-2">
+    <div id="nav_background"></div>
     <div id="nav_width"></div>
     <div class="d-flex justify-content-center gap-2" style="flex: 1">
       <div id="logo">
