--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -13,9 +13,8 @@
       <li>Home</li>
       <li>Produtos</li>
       <li>Sobre</li>
-      <li>Contato</li>
+      <a href="/contato"><li>Contato</li></a>
     </ul>
     <div style="flex: 1"></div>
   </div>
-  <div id="header_div"></div>
 </header>
