database connection configured, contact can be sended

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,22 +1,22 @@
 <main id="form_main" class="d-flex align-content-center justify-content-center">
-  <form id="form_page" method="post" action="/contact">
+  <form id="form_page" method="post" action="/contato">
 
     <div class="mb-3">
       <label for="name" class="form-label">Nome:</label>
-      <input id="name" class="form-control" type="text" required>
+      <input id="name" class="form-control" name="name" type="text" required>
     </div>
     <div class="mb-3">
       <label for="pet_name" class="form-label">Nome do seu pet:</label>
-      <input id="pet_name" class="form-control" type="text">
+      <input id="pet_name" class="form-control" name="pet_name" type="text">
     </div>
     <div class="mb-3">
       <label for="phone_number" class="form-label">Telefone:</label>
-      <input id="phone_number" class="form-control" type="number" required>
+      <input id="phone_number" class="form-control" name="phone" type="number" required>
     </div>
     <div class="mb-3">
       <label for="email" class="form-label">E-mail:</label>
-      <input id="email" class="form-control" type="email" required>
+      <input id="email" class="form-control" name="email" type="email" required>
     </div>
-
+    <button type="submit" class="btn btn-primary">Enviar</button>
   </form>
 </main>
