form error handle fixed, new success and error display on form send, <main> global padding setted

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<main>
+<main id="home_main">
   <div class="slider" data-bs-ride="slider">
     <div class="slider-inner">
       <div class="slider-item">
