--- a/public/index.css
+++ b/public/index.css
@@ -4,16 +4,23 @@
 
 @media screen and (min-width: 1048px) {
 
+  /* BODY */
   body {
     display: grid;
     margin: 0;
     box-sizing: border-box;
   }
 
+  /* GLOBALS */
   a {
     text-decoration: none;
   }
 
+  main {
+    padding-bottom: 6%;
+  }
+
+  /* HEADER */
   header {
     background-color: #2cbbc3;
   }
@@ -98,6 +105,12 @@
     -webkit-text-stroke-color: black;
   }
 
+  /* /HOME */
+
+  #home_main {
+    background-color: #32D0D9;
+  }
+
   .slider-inner {
     display: flex;
     justify-content: space-around;
@@ -132,8 +145,9 @@
     width: 300px;
   }
 
+
+  /* FOOTER */
   footer {
-    margin-top: 6%;
     background-color: #2F5759;
   }
 
@@ -151,10 +165,15 @@
   }
   
 
-  /* /contato */
-
+  /* /CONTATO */
   #form_main {
     padding-top: 6%;
+  }
+  
+  #form_main .contact-alert {
+    display: flex;
+    justify-content: center;
+    width: 100%
   }
 
   #form_page {
