--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,7 +1,12 @@
-<main id="form_main" class="d-flex align-content-center justify-content-center">
-  {{#if message}}
-  <div class="alert alert-success" role="alert">
-    <p>{{message}}</p>
+<main id="form_main" class="d-flex flex-column align-items-center justify-content-center">
+  {{#if message_success}}
+  <div class="contact-alert alert alert-success" role="alert">
+    <p>{{message_success}}</p>
+  </div>
+  {{/if}}
+  {{#if message_error}}
+  <div class="contact-alert alert alert-danger" role="alert">
+    <p>{{message_error}}</p>
   </div>
   {{/if}}
   <form id="form_page" method="post" action="/contato">
