--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -10,9 +10,9 @@
       </div>
     </div>
     <ul class="nav justify-content-center gap-4" style="flex: 1">
-      <li>Home</li>
-      <li>Produtos</li>
-      <li>Sobre</li>
+      <a href="/"><li>Home</li></a>
+      <a href="/produtos"><li>Produtos</li></a>
+      <a href="/sobre"><li>Sobre</li></a>
       <a href="/contato"><li>Contato</li></a>
     </ul>
     <div style="flex: 1"></div>
