--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -10,9 +10,8 @@
   </div>
   {{/if}}
   <form id="form_page" method="post" action="/contato">
-
     <div class="mb-3">
-      <label for="name" class="form-label">Nome:</label>
+      <label for="name" class="form-label">Seu nome:</label>
       <input id="name" class="form-control" name="name" type="text" required>
     </div>
     <div class="mb-3">
