--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,4 +1,5 @@
 <main id="form_main" class="d-flex flex-column align-items-center justify-content-center">
+  <h1>Entramos em contato com você!</h1>
   {{#if message_success}}
   <div class="contact-alert alert alert-success" role="alert">
     <p>{{message_success}}</p>
