footer links included, <li> global css added

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -3,9 +3,9 @@
     <div class="row justify-content-center align-items-center">
       <div class="col-3 d-flex justify-content-center">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2">Home</li>
-          <li class="nav-item mb-2">Produtos</li>
-          <li class="nav-item mb-2">Sobre</li>
+          <a href="/"><li class="nav-item mb-2">Home</li></a>
+          <a href="/produtos"><li class="nav-item mb-2">Produtos</li></a>
+          <a href="/sobre"><li class="nav-item mb-2">Sobre</li></a>
         </ul>
       </div>
       <div class="col-3">
