--- a/public/index.css
+++ b/public/index.css
@@ -30,6 +30,7 @@
     font-family: 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
     font-weight: 700;
+    color: black;
   }
 
   #title > span {
