home's roles added

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,15 @@
-<main id="home_main">
+<main id="home_main" role="main">
   <div class="slider" data-bs-ride="slider">
-    <div class="slider-inner">
-      <div class="slider-item">
-        <h2 class="slider-item-text">Cuide <span class="smaller-text">do seu </span>melhor amigo!</h2>
-        <img class="slider-img" src="/public/images/dogslider1.png" class="d-block w-100" alt="...">
+    <div class="slider-inner" role="listbox">
+      <div class="slider-item" role="option">
+        <h2 class="slider-item-text" role="text">Cuide <span class="smaller-text">do seu </span>melhor amigo!</h2>
+        <img class="slider-img" src="/public/images/dogslider1.png" class="d-block w-100" role="img" aria-label="Cão sentado olhando à frente">
       </div>
-      <div class="slider-item" hidden>
-        <img class="slider-img" src="/public/images/dogheader.png" class="d-block w-100" alt="...">
+      <div class="slider-item" hidden role="option">
+        <img class="slider-img" src="/public/images/dogheader.png" class="d-block w-100">
       </div>
-      <div class="slider-item" hidden>
-        <img class="slider-img" src="..." class="d-block w-100" alt="...">
+      <div class="slider-item" hidden role="option">
+        <img class="slider-img" src="..." class="d-block w-100">
       </div>
     </div>
 </div>
