--- a/views/admin/adm_login.handlebars
+++ b/views/admin/adm_login.handlebars
@@ -5,14 +5,14 @@
       <p>{{message_error}}</p>
     </div>
     {{/if}}
-    <form role="form" method="post" action="/admin/user">
+    <form role="form" method="post" action="/admin/login">
       <h1 class="h3 mb-3 fw-normal" role="heading">Acesso administrativo</h1>
       <div class="form-floating">
-        <input id="adm_login_input" type="text" class="form-control" role="textbox" aria-label="adm_login" placeholder="login" required>
+        <input id="adm_login_input" type="text" class="form-control" autocomplete="username" role="textbox" aria-label="adm_login" placeholder="login" name="login" required>
         <label for="adm_login_input">Login</label>
       </div>
       <div class="form-floating">
-        <input id="adm_password_input" type="email" class="form-control" placeholder="senha" required>
+        <input id="adm_password_input" type="password" class="form-control" autocomplete="current-password" placeholder="senha" name="password" required>
         <label for="adm_password_input">Senha</label>
       </div>
       <button class="w-100 btn btn-lg btn-primary" type="submit" role="button">Acessar</button>
