--- a/views/admin/adm_panel.handlebars
+++ b/views/admin/adm_panel.handlebars
@@ -8,11 +8,13 @@
 
 <main id="adm_panel_main" class="d-flex justify-content-center flex-wrap">
   <div class="d-flex contact-container flex-column align-items-center">
-    <h1 class="pb-5">Contatos</h1>
+    <div class="w-100 text-center text-white">
+      <h1 class="p-5">Contatos</h1>
+    </div>
     {{#each Contact}}
-    <div class="contact-box p-5">
+    <div class="contact-box p-5 bg-light border-bottom">
       <div>
-        <h4>{{name}}</h3>
+        <h3>{{name}}</h3>
         <p>{{petName}}</p>
         <p>{{phone}}</p>
         <p>{{email}}</p>
@@ -26,11 +28,11 @@
     </div>
     {{/each}}
   </div>
-  <div class="d-flex nav-container flex-column bg-light">
-    <div class="pt-5"></div>
-    <ul class="nav nav-pills flex-column pt-5 p-3">
-      <li class="nav-item">Criar usuário</li>
-      <li class="nav-item">Listar usuários</li>
+  <div class="d-flex nav-container flex-column bg-secondary bg-gradient">
+    <div class="p-5"></div>
+    <ul class="nav nav-pills flex-column align-items-center pt-5 p-3 gap-2">
+      <a href="/criar_usuario"><li class="nav-item btn btn-primary">Criar usuário</li></a>
+      <a href="/listar_usuario"><li class="nav-item btn btn-primary">Listar usuários</li></a>
     </ul>
   </div>
 </main>
