--- a/views/admin/adm_panel.handlebars
+++ b/views/admin/adm_panel.handlebars
@@ -6,26 +6,49 @@
   <button class="btn btn-primary" type="submit">Criar</button>
 </form> --}}
 
-<main id="adm_panel_main" class="d-flex justify-content-center flex-wrap">
+<main id="adm_panel_main" class="d-flex justify-content-center flex-wrap w-100">
+  <div id="error_modal" class="modal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-danger">Erro</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Ocorreu um erro ao tentar concluir o contato. Por gentileza contate o administrador.</p>
+      </div>
+      <div class="modal-footer">
+        <button id="error_modal_close" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
   <div class="d-flex contact-container flex-column align-items-center">
     <div class="w-100 text-center text-white">
       <h1 class="p-5">Contatos</h1>
     </div>
-    {{#each Page}}
-    <a href="/admin/painel/{{number}}"><p>{{number}}</p></a>
-    {{/each}}
+    {{#if Page}}
+    <div class="d-flex flex-row">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          {{#each Page}}
+          <li class="page-item"><a class="page-link text-black" href="/admin/painel/{{number}}">{{number}}</a></li>
+          {{/each}}
+        </ul>
+      </nav>
+    </div>
+    {{/if}}
     {{#each Contact}}
     <div class="contact-box p-5 bg-light border-bottom">
-      <div>
+      <div class="contact-data">
         <h3>{{name}}</h3>
         <p>{{petName}}</p>
         <p>{{phone}}</p>
-        <p>{{email}}</p>
+        <p class="email">{{email}}</p>
       </div>
       <div class="contact">
         <div class="btn-group">
-          <button type="button" class="btn btn-success">Concluir</button>
-          <button type="button" class="btn btn-danger">Excluir</button>
+          <button type="button" class="conclude-btn btn btn-success">Concluir</button>
         </div>
       </div>
     </div>
