--- a/views/layouts/adm.handlebars
+++ b/views/layouts/adm.handlebars
@@ -7,6 +7,8 @@
   <title>Pet Shop</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="/public/index.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="/public/js/jquery-3.6.0.min.js" defer></script>
+  <script type="text/javascript" src="/public/js/admin.js" defer></script>
 </head>
 <body>
   {{{body}}}
