concluded contacts are saved with boolean row, Ajax request works fine

--- a/views/admin/adm_panel.handlebars
+++ b/views/admin/adm_panel.handlebars
@@ -39,7 +39,7 @@
     </div>
     {{/if}}
     {{#each Contact}}
-    <div class="contact-box p-5 bg-light border-bottom">
+    <div class="contact-box p-5 bg-light border-bottom" contactId={{id}}>
       <div class="contact-data">
         <h3>{{name}}</h3>
         <p>{{petName}}</p>
