--- a/views/admin/adm_panel.handlebars
+++ b/views/admin/adm_panel.handlebars
@@ -49,6 +49,7 @@
       <div class="contact">
         <div class="btn-group">
           <button type="button" class="conclude-btn btn btn-success">Concluir</button>
+          <button type="button" class="undo-btn btn btn-warning" style="display: none">Desfazer</button>
         </div>
       </div>
     </div>
