--- a/views/admin/adm_panel.handlebars
+++ b/views/admin/adm_panel.handlebars
@@ -51,10 +51,21 @@
           <button type="button" class="conclude-btn btn btn-success">Concluir</button>
           <button type="button" class="undo-btn btn btn-warning" style="display: none">Desfazer</button>
         </div>
-        <div class="form-floating d-flex flex-row gap-2">
+        <div class="form-floating d-flex flex-row">
           <input type="text" id="addANote" class="form-control" placeholder="Digite o comentário..." />
           <label class="form-label d-flex align-items-center" for="addANote">+ Adicionar anotação</label>
-          <img src="/public/images/send-plus.svg">
+          <button type="button" class="send-note-btn btn btn-secondary" title="Enviar anotação">
+            <svg xmlns="/public/images/send-plus.svg" width="16" height="16" fill="currentColor" class="bi bi-send-plus" viewBox="0 0 16 16">
+              <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855a.75.75 0 0 0-.124 1.329l4.995 3.178 1.531 2.406a.5.5 0 0 0 .844-.536L6.637 10.07l7.494-7.494-1.895 4.738a.5.5 0 1 0 .928.372l2.8-7Zm-2.54 1.183L5.93 9.363 1.591 6.602l11.833-4.733Z"/>
+              <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z"/>
+            </svg>
+          </button>
+          {{#each Note}}
+          <div class="note-box">
+            <h6>{{user}}:</h6>
+            <p>{{comment}}</p>
+          </div>
+          {{/each}}
         </div>
       </div>
     </div>
